# trading_bot

./: .gitignore  README.md  pyproject.toml
src/trading_bot/: __init__.py  backtest.py  cli.py  data.py  errors.py  reporting.py  services.py  strategies.py  web.py
src/trading_bot/application/: __init__.py  chart_lab.py  constants.py  dashboard.py  execution.py  forms.py  presets.py  requests.py
src/trading_bot/static/: base.js  chart_strategy_lab.js  chart_window.js  index.js  styles.css
src/trading_bot/templates/: base.html  chart_window.html  index.html  report.html  sweep.html
src/trading_bot/templates/partials/: _strategy_modal.html  _strategy_sections.html  _trade_preview_table.html
tests/: test_backtest.py  test_data.py  test_services.py  test_web.py
