[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-bot-research"
version = "0.1.0"
description = "Research and backtesting starter for trading strategies."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2",
  "yfinance>=0.2.54",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
trading-bot = "trading_bot.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

